--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,60 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+  <script>
+    $(function(){
+
+window.sr = ScrollReveal();
+
+if ($(window).width() < 768) {
+
+  if ($('.timeline-content').hasClass('js--fadeInLeft')) {
+    $('.timeline-content').removeClass('js--fadeInLeft').addClass('js--fadeInRight');
+  }
+
+  sr.reveal('.js--fadeInRight', {
+    origin: 'right',
+    distance: '300px',
+    easing: 'ease-in-out',
+    duration: 800,
+  });
+
+} else {
+  
+  sr.reveal('.js--fadeInLeft', {
+    origin: 'left',
+    distance: '300px',
+    easing: 'ease-in-out',
+    duration: 800,
+  });
+
+  sr.reveal('.js--fadeInRight', {
+    origin: 'right',
+    distance: '300px',
+    easing: 'ease-in-out',
+    duration: 800,
+  });
+
+}
+
+sr.reveal('.js--fadeInLeft', {
+    origin: 'left',
+    distance: '300px',
+    easing: 'ease-in-out',
+    duration: 800,
+  });
+
+  sr.reveal('.js--fadeInRight', {
+    origin: 'right',
+    distance: '300px',
+    easing: 'ease-in-out',
+    duration: 800,
+  });
+
+
+});
+
+  </script>
 <body>
   <app-root></app-root>
 </body>
